:memo: Update changelog

--- a/changelogs/v1.0.0.md
+++ b/changelogs/v1.0.0.md
@@ -6,11 +6,11 @@ This document contains the most important changes made.
 
 ### All
 
+- allow for configurable playercount and gamewidth for most games
 - use `\paperheight` instead of `500pt`
 - use automated cell/block size calculation
 - reword (for example `board` instead of `field`)
 - update coordinate systems (use `m:n` instead of `x:y`)
-- allow for configurable playercount and gamewidth for most games
 - GUI updates
 - Improve spacing
 
@@ -48,11 +48,13 @@ This document contains the most important changes made.
 
 ### Added
 
+- Scripts for installation and compilation
 - Gifs for the wiki
 - Code of conduct
 - Issue templates
 - Push request template
 - Changelog information
+- gitignore
 
 ### Bug fixes
 
